# SRL-QA

./: .gitignore  ALL_EVALUATION_METRICS_COMPARISON.md  ARCHITECTURE_AND_EVALUATION_METRICS.md  COMPLETE_FUNCTIONAL_PROJECT_GUIDE.md  COMPLETE_PROJECT_FUNCTIONALITY_REPORT.md  FINAL_PROJECT_PRESENTATION.md  FINAL_PROJECT_PRESENTATION_40_SLIDES.pptx  FINAL_PROJECT_PRESENTATION_RAISE_UPDATED.pptx  FURTHER_IMPLEMENTATION_PLAN.md  FURTHER_INNOVATION_PLAN.md  KEY_TERMS_PROJECT_WORK.md  OUR_SYSTEM_VS_EXISTING_SYSTEMS.md  PROFESSOR_PRESENTATION_SPEECH.md  PROJECT_EXPLANATION.md  PROJECT_FLOWS_AND_ARCHITECTURE_DIAGRAMS.md  PROJECT_INDEX.md  PROJECT_UNDERSTANDING_GUIDE.md  PropBank_SRL_QA_2B_Gemma_QLoRA.ipynb  PropBank_SRL_QA_LoRA_QLoRA.ipynb  README.md  RUN_ALL_EXPERIMENTS_DEMO.md  SURVEY_INNOVATION_IMPLEMENTATION_ANALYSIS.md  WHAT_NEXT.md  build_final_project_ppt.py  run_complete_project_check.py
srlqa/: .gitignore  Question_Answering_Using_Semantic_Roles_Conference_35Slides.pptx  RAISE_SRLQA_PLOTS_FULL_PRESENTATION.pptx  README.md  app.py  build_conference_ppt.py  main.py  pyproject.toml  raise_streamlit_app.py  requirements.txt  run_all_models.py
srlqa/data/: challenge_suite_v2.json
srlqa/docs/: CODEBASE_ANALYSIS.md  EVALUATION_PROTOCOL.md  INNOVATION_RESULTS_AND_RESEARCH_COMPARISON.md  LAST_MINUTE_REVISION.md  PROJECT_PRESENTATION_MASTER_GUIDE.md  RAISE_SRL_QA_ROADMAP.md  SIMPLE_ANALYSIS_AND_INNOVATION.md
srlqa/plots/: ACCURACY_COMPARISON_TABLE.csv  ACCURATE_DOCUMENTATION_INDEX.md  BENCHMARK_TRACKS_EXACT.csv  EXACT_VALUES.json  RAISE_FAST_SEED_RESULTS.csv
(+172 files in other folders)
