[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srlqa"
version = "0.1.0"
description = "RAISE-SRL-QA: retrieval-augmented, self-correcting SRL question answering"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.20.0",
  "huggingface-hub>=0.24.0",
  "transformers>=4.40.0",
  "torch>=2.1.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "nltk>=3.8.0",
]

[project.scripts]
srlqa = "srlqa.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["srlqa*"]
